--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
 	margin: 0;
 	position:relative;
 }
+
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -202,6 +203,12 @@ nav h1 a {
   top: 80px;
   width: 50%;
 }
+
+@media only screen and (max-width: 400) {
+  #map-container {
+    display: none;
+  }
+}
 .inside #map {
   background-color: #ccc;
   height: 100%;
@@ -249,6 +256,7 @@ nav h1 a {
 }
 #reviews-container {
   padding: 30px 40px 80px;
+  width: 50%;
 }
 #reviews-container h2 {
   color: #f58500;
