--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    width: 100%;
 }
 
 /* Display list items side by side */
@@ -108,7 +108,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   height: 100%;
-  background-color: #3397DB;
+  background-color: #252831;
   align-items: center;
   padding: 5px 0;
 }
@@ -138,29 +138,32 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
-  display: flex; flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
+  display: inline-flex;
+  flex-wrap: wrap;
 }
+
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 10px 30px 25px;
-  text-align: left;
-  max-width: 470;
-  width: 75%;
+  padding: 10px 10px;
+  text-align: center;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
 }
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  max-height: 200px;
 }
+
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -169,12 +172,28 @@ nav h1 a {
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
+  min-height:40px;
   text-transform: uppercase;
+  text-align: center;
 }
+
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
 }
+
+.restaurant-results {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  text-align: center;
+}
+
+
+/*check into*/
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
@@ -193,26 +212,31 @@ nav h1 a {
   position: fixed;
   top: 0;
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 320px;
+  overflow-x:hidden !important;
   z-index: 1000;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  height: 200px;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  width: 100%;
+  margin: auto;
 }
 
-@media only screen and (max-width: 400) {
+@media only screen and (min-width: 400) {
   #map-container {
     display: none;
   }
 }
 .inside #map {
   background-color: #ccc;
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: auto;
+  margin:auto;
 }
 .inside #footer {
   bottom: 0;
@@ -256,7 +280,7 @@ nav h1 a {
 }
 #reviews-container {
   padding: 30px 40px 80px;
-  width: 50%;
+  /**/width: 50%;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -285,4 +309,32 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+@media (max-width: 768px) {
+  .inside #maincontent {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .inside #map-container {
+    height: 300px;
+    position: absolute;
+    width: 100%;
+  }
+  #restaurant-container, #reviews-container {
+    width: 100%;
+  }
+  #breadcrumb {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    text-align: center;
+  }
+  .leaflet-control-zoom.leaflet-bar.leaflet-control {
+    margin-top: 4rem;
+  }
+  .inside #footer {
+    width: 100%;
+    padding: 20px 0;
+  }
 }
