--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@ nav h1 a {
   text-align: center;
   display: inline-flex;
   flex-wrap: wrap;
+  justify-content: center
 }
 
 #restaurants-list li {
